# sse_smart_QA_backend

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  ReadMe.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  intents.py  routes.py
app/core/: __init__.py  config.py  llm_config.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  intent_detector.py  llm_orchestrator.py  session_manager.py
app/static/: chat.css
app/templates/: chat.html
app/utils/: __init__.py
config/: intent_rules.yaml  llm_config.yaml
tests/: __init__.py  test_intent_detector.py  test_session.py
